# chess-3d

./: .gitmodules  CMakeLists.txt  Makefile  README.md  main.cpp
IndexModel/: chessBoardIndex.h  chessMove.h  mailbox.h  moveGenerator.h  pieceList.h
Model/: chessBoardModel.h  itemMenu.h  pieceModel.h  worldObject.h
Util/: convertCoordinates.h  mesh.h  model.h  textRender.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
resources/shaders/: lightObjShader.vs  simpleColorShader.fs  simpleColorShader.vs
resources/vertexData/: chessBoard.txt  woodPlane.txt
src/: main.cpp
src/index_model/: board.h  mailbox.h  move.h  move_gen.h  piece.h  piece_list.h
src/model/: animation.h  board.h  item_menu.h  name_store.h  piece.h  world_object.h
src/resources/vertexData/: cube.txt  square.txt
src/shaders/: normal_light.fs  simpleColorShader.fs  text.fs  text.vs
src/util/: camera.h  mesh.h  model.h  read_files.h  shader.h  text_render.h
